--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,15 +5,128 @@
     
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    
+    <meta name="description" content="The portfolio of Ally Palanzi, a web designer and developer based in Washington, DC.">
+    <meta name="author" content="Ally Palanzi">
+
+    <!-- Mobile Specific Metas
+    ================================================== -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- GOOGLE FONT ARVO & OSWALD
+    ================================================== -->
+    <link href='http://fonts.googleapis.com/css?family=Arvo:400,400italic|Oswald' rel='stylesheet' type='text/css'>
+  <!-- SCRIPTS
+  ================================================== -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="js/functions.js"></script>
+
+
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <!-- Favicons
+  ================================================== -->
+<link rel="icon" 
+      type="image/png" 
+      href="img/fav.png">
+
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%= current_page.data.title %></title>
     
-    <%= stylesheet_link_tag "normalize", "all" %>
+    <%= stylesheet_link_tag "normalize", "styles" %>
     <%= javascript_include_tag  "all" %>
   </head>
   
   <body class="<%= page_classes %>">
     <%= yield %>
   </body>
+    
+
+  <script type="text/javascript">
+
+
+
+
+$(document).ready(function () {     
+    $.jribbble.getShotsByPlayerId('allypalanzi', function (playerShots) {
+        var html = [];
+    
+        $.each(playerShots.shots, function (i, shot) {
+            html.push('<li><a target="_blank" href="' + shot.url + '">');
+            html.push('<img class="thumbs" src="' + shot.image_teaser_url + '" ');
+            html.push('alt="' + shot.title + '"></a></li>');
+        });
+        html.push('<div class="clear"></div>');
+
+        $('#dribbble').html(html.join(''));
+    }, {page: 1, per_page: 8});
+});
+
+    $(function(){
+        $('.submit').click(function(e){
+
+            // Stop the form actually posting
+            e.preventDefault();
+
+            // Send the request
+            $.post('contact.php', {
+                name: $('#name').val(),
+                email: $('#email').val(),
+                subject: $('#subject').val(),
+                message: $('#message').val(),
+
+            }, function(d){
+                console.log(d);
+                // Here we handle the response from the script
+                // We are just going to alert the result for now
+                alert(d);
+                
+            });
+        });
+    });
+
+
+function jsonFlickrFeed(json) {
+// Assign to a global variable
+window.jsonFromFlickr = json;
+}
+
+function makePhoto(photo) {
+var li = document.createElement('li');
+var a = document.createElement('a');
+a.href = photo.link;
+a.target = "_blank";
+var img = document.createElement('img');
+img.src = photo.media.m.replace('_m', '_n');
+img.title = photo.title;
+img.alt = photo.alt;
+a.appendChild(img);
+li.appendChild(a);
+return li;
+}
+
+
+function showPhotos() {
+if (!jsonFromFlickr) {
+alert('Flickr photos failed to load');
+}
+// 'Empty' the ul by removing all of its children
+var ul = document.getElementById('myPhotos');
+while (ul.hasChildNodes()) {
+ul.removeChild(ul.firstChild);
+}
+// Loop over the photos and display them all
+for (var i = 0; i <= 7; i++) {
+photo = jsonFromFlickr.items[i];
+ul.appendChild(makePhoto(photo));
+}
+}
+
+window.onload = showPhotos;
+
+  </script>
+    <script type="text/javascript" src="http://api.flickr.com/services/feeds/photos_public.gne?id=34712236@N03&lang=en-us&format=json">
+</script>
+
+
 </html>
