updated typeface and some styles, cleaning up that yucky sass from last year

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,16 +1,16 @@
 <!-- NAV
 	================================================== -->
-	<div id="navcont"></div>
-	<div id="wrapper">
-    <div id="wrapper-left">
+	<div class="navcont"></div>
+	<div class="wrapper">
+    <div class="wrapper-left">
         <div class="allyicon"></div>
     </div>
-    <div id="wrapper-right">    
+    <div class="wrapper-right">    
 
         <div id="gallery">
             <div class="header">
-                <h1 class="text">HI! I'M <font color="#22B573">ALLY PALANZI</font>. A <font color="#22B573">DESIGNER</font> AND <a href="https://github.com/allypalanzi" target="_blank">FRONT-END DEVELOPER</a> </font> FROM WASHINGTON,DC.
-                </h1><br><br><br>
+                <h1 class="text">Hi! I'm <a href="http://www.twitter.com/mylifeasalllly" target="_blank">Ally Palanzi</a>.</h1>
+                <h2>I'm a <a href="http://dribbble.com/allypalanzi" target="_blank">designer</a> and <a href="https://github.com/allypalanzi" target="_blank">front-end developer</a> from Washington, DC currently intering for <a href="http://www.voxmedia.com" target="_blank">Vox Media</a>.</h2><br /><br /><br />
                 <h1>
                     PORTFOLIO
                 </h1>
@@ -22,7 +22,7 @@
                     <div class="icon-overlay" id="image-1">
                         <img src="img/voxmedia.jpg" alt="">
                         <div>
-                            <h3>voxmedia.com</h3>
+                            <h2>voxmedia.com</h2>
                             <p>Website and Media Kit built for Vox Media. I worked alongside designers (Uy Tieu, Ramla Mahmood, Ted Irvine) and developers (Tate Tozer, John Fuller, Joe Grossberg) as a front end developer. <a href="http://www.voxmedia.com" target="_blank">View it live!</a></p>
                             <a href="#image-12" class="icon-prev"></a>
                             <a href="#image-2" class="icon-next"></a>
@@ -36,7 +36,7 @@
                     <div class="icon-overlay" id="image-2">
                         <img src="img/ukrave-1.png" alt="">
                         <div>
-                            <h3>u.krave design</h3>
+                            <h2>u.krave design</h2>
                             <p>Responsive portfolio built with my creative partner, <a href="http://www.unakravets.com" target="_blank">Una Kravets</a> for our freelance design team.<a href="http://www.ukrave.us" target="_blank">View it live!</a></p>
                             <a href="#image-1" class="icon-prev"></a>
                             <a href="#image-3" class="icon-next"></a>
@@ -46,7 +46,7 @@
                     <div class="icon-overlay" id="image-3">
                         <img src="img/ukrave-2.png" alt="">
                         <div>
-                            <h3>u.krave design</h3>
+                            <h2>u.krave design</h2>
                                 <p>Responsive portfolio built with my creative partner, <a href="http://www.unakravets.com" target="_blank">Una Kravets</a> for our freelance design team.<a href="http://www.ukrave.us" target="_blank">View it live!</a></p>
                             <a href="#image-2" class="icon-prev"></a>
                             <a href="#image-4" class="icon-next"></a>
@@ -56,7 +56,7 @@
                     <div class="icon-overlay" id="image-4">
                         <img src="img/ukrave-3.png" alt="">
                         <div>
-                            <h3>u.krave design</h3>
+                            <h2>u.krave design</h2>
                                <p>Responsive portfolio built with my creative partner, <a href="http://www.unakravets.com" target="_blank">Una Kravets</a> for our freelance design team.<a href="http://www.ukrave.us" target="_blank">View it live!</a></p>
                             <a href="#image-3" class="icon-prev"></a>
                             <a href="#image-5" class="icon-next"></a>
@@ -66,7 +66,7 @@
                     <div class="icon-overlay" id="image-5">
                         <img src="img/ukrave-4.png" alt="">
                         <div>
-                            <h3>u.krave design</h3>
+                            <h2>u.krave design</h2>
                                 <p>Responsive portfolio built with my creative partner, <a href="http://www.unakravets.com" target="_blank">Una Kravets</a> for our freelance design team.<a href="http://www.ukrave.us" target="_blank">View it live!</a></p>
                             <a href="#image-4" class="icon-prev"></a>
                             <a href="#image-6" class="icon-next"></a>
@@ -81,7 +81,7 @@
                     <div class="icon-overlay" id="image-6">
                         <img src="img/ysc.png" alt="">
                         <div>
-                            <h3>yoga service council identity</h3>
+                            <h2>yoga service council identity</h2>
                             <p>Logo and collateral designed for the Yoga Service Council.</p>
                             <a href="#image-5" class="icon-prev"></a>
                             <a href="#image-8" class="icon-next"></a>
@@ -96,7 +96,7 @@
                     <div class="icon-overlay" id="image-8">
                         <img src="img/sykefest.jpg" alt="">
                         <div>
-                             <h3>sykefest</h3>
+                             <h2>sykefest</h2>
                             <p>One of the first websites I designed and coded, an event site created for Syke, a Northern Virginia non-profit. Each page features original photography. <a href="http://allypalanzi.com/live/sykefest/" target="_blank">View it live!</a></p>
                             <a href="#image-7" class="icon-prev"></a>
                             <a href="#image-9" class="icon-next"></a>
@@ -111,7 +111,7 @@
                     <div class="icon-overlay" id="image-9">
                         <img src="img/penguincrossing.png" alt="">
                         <div>
-                            <h3>penguin crossing</h3>
+                            <h2>penguin crossing</h2>
                             <p>Android game designed and developed for an introductory computer science course.</p>
                             <a href="#image-8" class="icon-prev"></a>
                             <a href="#image-10" class="icon-next"></a>
@@ -128,7 +128,7 @@
                     <div class="icon-overlay" id="image-10">
                         <img src="img/papertowns.jpg" alt="">
                         <div>
-                            <h3>paper towns</h3>
+                            <h2>paper towns</h2>
                             <p>A book cover created for the novel Paper Towns written by John Green. For this project, I folded a map into a cityscape, photographed it in order to portray the importance of maps and the metaphor of paper in the story.</p>
                             <a href="#image-9" class="icon-prev"></a>
                             <a href="#image-11" class="icon-next"></a>
@@ -142,7 +142,7 @@
                     <div class="icon-overlay" id="image-11">
                         <img src="img/virginiawoolf.jpg" alt="" width="400px">
                         <div>
-                            <h3>who's afraid of virginia woolf?</h3>
+                            <h2>who's afraid of virginia woolf?</h2>
                             <p>Poster created for the play Who's Afraid of Virginia Woolf? For this project, I layed out symbols and items from the play on a table to demonstrate the disarray throughout the play, then photographed it. I overlaid bold, modern typography to give off the modern feel of the family structure in the play, even though it is about a family in the 60s.</p>
                             <a href="#image-10" class="icon-prev"></a>
                             <a href="#image-1" class="icon-next"></a>
@@ -152,6 +152,14 @@
                 </li>
                 
             <div class="clear"></div>
+
+            </ul>
+            <div class="header">
+                <h1>DRIBBBLES</h1>
+            </div>
+
+
+            <ul id="dribbble">
 
             </ul>
 
@@ -164,14 +172,7 @@
 
             <div style="margin-bottom:50px;"class="clear"></div>
 
-            <div class="header">
-                <h1>DRIBBBLES</h1>
-            </div>
-
-
-            <ul id="dribbble">
-
-            </ul>
+            
             <div class="header">
                 <h1>SAY HELLO!</h1>
             </div>
