--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -4,8 +4,8 @@
 
 */
 
-/* #Reset
-================================================== */
+// #Reset
+// ================================================== 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video  {
 		margin: 0;
 		padding: 0;
@@ -29,8 +29,8 @@
 		border-collapse: collapse;
 		border-spacing: 0; }
 
-/* #Fonts
-================================================== */
+// #Fonts
+// ==================================================
 @font-face  {
     font-family: 'socialicoregular';
     src: url('fonts/socialico-webfont.eot');
@@ -43,14 +43,14 @@
 
 }
 
-/* #Variables
-================================================== */
+// #Variables
+// ==================================================
     $green:#22B573;
     $gray:#757575;
 
 
-/* #Basic Styles
-================================================== */
+// #Basic Styles
+// ==================================================
 	body  {
         width: 100%;
         min-width: 320px;
@@ -96,8 +96,8 @@
     }
 
 
-/* #Animations
-================================================== */
+// #Animations
+// ==================================================
 
 @keyframes fadein
  {
@@ -147,58 +147,15 @@ from  {opacity: 1;}
 to  {opacity: 0;}
 }
 
-@keyframes fadeincolor
- {
-from  {
-    opacity: 0.7;
-    color:$green;  
-    }
-to  {opacity: 1;
-    color:$gray;
-    }
-}
-
-@-moz-keyframes fadeincolor /* Firefox */
- {
-from  {
-    opacity: 0.7;
-    color:$green;  
-    }
-to  {opacity: 1;
-    color:$gray;
-    }
-}
-
-@-webkit-keyframes fadeincolor /* Safari and Chrome */
- {
-from  {
-    opacity: 0.7;
-    color:$green;  
-    }
-to  {opacity: 1;
-    color:$gray;
-    }
-}
-
-@-o-keyframes fadeincolor /* Opera */
- {
-from  {
-    opacity: 0.7;
-    color:$green;  
-    }
-to  {opacity: 1;
-    color:$gray;
-    }
-}
 
 
-/* #Typography
-================================================== */
+// #Typography
+// ==================================================
     h1 {
         font-family: 'Oswald',helvetica;
         color: #000;
         font-size:  40px;
-        line-height: 45px;
+        line-height: 60px;
         font-weight: 300;
  
     }
@@ -208,15 +165,17 @@ to  {opacity: 1;
         color: #000;
         font-size:  30px;
         font-weight: 300;
+        line-height: 35px;
     }
 
     h3 {
-        font-family: 'Arvo',helvetica;
-        color: #000;
-        font-size:  35px;
-        line-height:  40px;
-        margin-bottom: 5px;
+        font-family: 'Arvo';
+        color: 000;
+        font-size: 25px;
+        font-weight: 300;
+        line-height: 30px;
     }
+
 
     h4 {
         font-family: 'socialicoregular';
@@ -231,46 +190,43 @@ to  {opacity: 1;
         margin: 0px auto;    
     }
 
-    .text a {
-        text-decoration:  none;
+    a {
         color: #22B573;
+        text-decoration:  none;
+        transition: color .5s;
+        -moz-transition: color .5s;
+        -webkit-transition: color .5s;
+        &:hover {
+            color: $gray;
+            transition: color .5s;
+            -webkit-transition: color .5s;
+            -moz-transition: color .5s;
+        }
     }
 
-    .text a:hover {
-        animation:  fadeincolor 0.5s;
-        -moz-animation:  fadeincolor 0.5s; /* Firefox */
-        -webkit-animation:  fadeincolor 0.5s; /* Safari and Chrome */
-        -o-animation:  fadeincolor 0.5s; /* Opera */
-        color: $gray;
-    }
+
+
     div a {
         text-decoration:  none;
         color: #22B573;
-    }
-
-    p a:hover {
-        animation:  fadeincolor 0.5s;
-        -moz-animation:  fadeincolor 0.5s; /* Firefox */
-        -webkit-animation:  fadeincolor 0.5s; /* Safari and Chrome */
-        -o-animation:  fadeincolor 0.5s; /* Opera */
-        color: $gray;
+        transition: color .5s;
+        -webkit-transition: color .5s;
+        -moz-transition: color .5s;
     }
 
 
-
-
-/* #Nav 
-================================================== */
-    #navcont {
+// #Nav 
+// ==================================================
+    .navcont {
         width: 100%;
         background-color: #000;
         height: 10px;
     }
 
 
-/* #Body
-================================================== */
-    #wrapper {
+// #Body
+// ================================================== 
+    .wrapper {
         width: 95%;
         max-width: 1000px;
         margin: 0px auto;
@@ -285,13 +241,13 @@ to  {opacity: 1;
         clear: both;
     }
 
-    #wrapper-right {
+    .wrapper-right {
         max-width: 800px;
         width: 100%;
         float: right;
     }
 
-    #wrapper-left {
+    .wrapper-left {
         width: 100%;
         max-width: 150px;
         float: left;
@@ -305,8 +261,8 @@ to  {opacity: 1;
 
 
 
-/* #CONTENT
-=====================================*/
+// #CONTENT
+// =====================================
 
 
 .header {
@@ -374,6 +330,9 @@ to  {opacity: 1;
         font-family: 'Oswald', sans-serif;
         font-weight: 300;
         text-transform: uppercase;
+        transition: color .5s;
+        -webkit-transition: color .5s;
+        -moz-transition: color .5s;
     }
 }
 
