idk what i'm doing

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,43 +1,65 @@
-<!-- NAV
-	================================================== -->
-	<div class="navcont"></div>
-	<div class="wrapper">
+---
+Title: Ally Palanzi
+---
+<div class="navcont"></div>
+<div class="wrapper">
     <div class="wrapper-left">
         <div class="allyicon"></div>
     </div>
-    <div class="wrapper-right">    
+    <div class="wrapper-right">
 
-        <div id="gallery">
+        <div class="gallery">
             <div class="header">
-                <h1 class="text">Hi! I'm <a href="http://www.twitter.com/mylifeasalllly" target="_blank">Ally Palanzi</a>.</h1>
-                <h2>I'm a <a href="http://dribbble.com/allypalanzi" target="_blank">designer</a> and <a href="https://github.com/allypalanzi" target="_blank">front-end developer</a> from Washington, DC currently intering for <a href="http://www.voxmedia.com" target="_blank">Vox Media</a>.</h2><br /><br /><br />
-                <h1>
-                    PORTFOLIO
+                <h1 class="text">
+                    Hi! I'm
+                    <a href="http://www.twitter.com/mylifeasalllly" target="_blank">Ally Palanzi</a>
+                    .
                 </h1>
+                <h2>
+                    I'm a
+                    <a href="http://dribbble.com/allypalanzi" target="_blank">designer</a>
+                    and
+                    <a href="https://github.com/allypalanzi" target="_blank">front-end developer</a>
+                    from Washington, DC. Currently a senior at American University &amp; interning for
+                    <a href="http://www.voxmedia.com" target="_blank">Vox Media</a>
+                    .
+                </h2>
+                <br />
+                <br />
+                <br />
+                <h1>Portfolio</h1>
             </div>
             <ul class ="icon-album" id="icons">
-            <li><a href="#image-1">
-                        <img src="img/voxmedia-thumb.jpg" alt="" class="thumbs">
-                    </a>
+                <li>
+                    <a href="#image-1">
+                        <img src="img/voxmedia-thumb.jpg" alt="" class="thumbs"></a>
                     <div class="icon-overlay" id="image-1">
                         <img src="img/voxmedia.jpg" alt="">
                         <div>
                             <h2>voxmedia.com</h2>
-                            <p>Website and Media Kit built for Vox Media. I worked alongside designers (Uy Tieu, Ramla Mahmood, Ted Irvine) and developers (Tate Tozer, John Fuller, Joe Grossberg) as a front end developer. <a href="http://www.voxmedia.com" target="_blank">View it live!</a></p>
+                            <p>
+                                Website and Media Kit built for Vox Media. I worked alongside designers (Uy Tieu, Ramla Mahmood, Ted Irvine) and developers (Tate Tozer, John Fuller, Joe Grossberg) as a front end developer.
+                                <a href="http://www.voxmedia.com" target="_blank">View it live!</a>
+                            </p>
                             <a href="#image-12" class="icon-prev"></a>
                             <a href="#image-2" class="icon-next"></a>
                         </div>
                         <a href="#page" class="icon-close">x Close</a>
                     </div>
                 </li>
-                <li><a href="#image-2">
-                        <img src="img/ukrave-thumb.png" alt="" class="thumbs">
-                    </a>
+                <li>
+                    <a href="#image-2">
+                        <img src="img/ukrave-thumb.png" alt="" class="thumbs"></a>
                     <div class="icon-overlay" id="image-2">
                         <img src="img/ukrave-1.png" alt="">
                         <div>
                             <h2>u.krave design</h2>
-                            <p>Responsive portfolio built with my creative partner, <a href="http://www.unakravets.com" target="_blank">Una Kravets</a> for our freelance design team.<a href="http://www.ukrave.us" target="_blank">View it live!</a></p>
+                            <p>
+                                Responsive portfolio built with my creative partner,
+                                <a href="http://www.unakravets.com" target="_blank">Una Kravets</a>
+                                for our freelance design team.
+                                <a href="http://www.ukrave.us" target="_blank">View it live!</a>
+                            </p>
                             <a href="#image-1" class="icon-prev"></a>
                             <a href="#image-3" class="icon-next"></a>
                         </div>
@@ -47,7 +69,12 @@
                         <img src="img/ukrave-2.png" alt="">
                         <div>
                             <h2>u.krave design</h2>
-                                <p>Responsive portfolio built with my creative partner, <a href="http://www.unakravets.com" target="_blank">Una Kravets</a> for our freelance design team.<a href="http://www.ukrave.us" target="_blank">View it live!</a></p>
+                            <p>
+                                Responsive portfolio built with my creative partner,
+                                <a href="http://www.unakravets.com" target="_blank">Una Kravets</a>
+                                for our freelance design team.
+                                <a href="http://www.ukrave.us" target="_blank">View it live!</a>
+                            </p>
                             <a href="#image-2" class="icon-prev"></a>
                             <a href="#image-4" class="icon-next"></a>
                         </div>
@@ -57,7 +84,12 @@
                         <img src="img/ukrave-3.png" alt="">
                         <div>
                             <h2>u.krave design</h2>
-                               <p>Responsive portfolio built with my creative partner, <a href="http://www.unakravets.com" target="_blank">Una Kravets</a> for our freelance design team.<a href="http://www.ukrave.us" target="_blank">View it live!</a></p>
+                            <p>
+                                Responsive portfolio built with my creative partner,
+                                <a href="http://www.unakravets.com" target="_blank">Una Kravets</a>
+                                for our freelance design team.
+                                <a href="http://www.ukrave.us" target="_blank">View it live!</a>
+                            </p>
                             <a href="#image-3" class="icon-prev"></a>
                             <a href="#image-5" class="icon-next"></a>
                         </div>
@@ -67,7 +99,12 @@
                         <img src="img/ukrave-4.png" alt="">
                         <div>
                             <h2>u.krave design</h2>
-                                <p>Responsive portfolio built with my creative partner, <a href="http://www.unakravets.com" target="_blank">Una Kravets</a> for our freelance design team.<a href="http://www.ukrave.us" target="_blank">View it live!</a></p>
+                            <p>
+                                Responsive portfolio built with my creative partner,
+                                <a href="http://www.unakravets.com" target="_blank">Una Kravets</a>
+                                for our freelance design team.
+                                <a href="http://www.ukrave.us" target="_blank">View it live!</a>
+                            </p>
                             <a href="#image-4" class="icon-prev"></a>
                             <a href="#image-6" class="icon-next"></a>
                         </div>
@@ -75,9 +112,9 @@
                     </div>
                 </li>
 
-                <li><a href="#image-6">
-                        <img src="img/ysc-thumb.png" alt="" class="thumbs">
-                    </a>
+                <li>
+                    <a href="#image-6">
+                        <img src="img/ysc-thumb.png" alt="" class="thumbs"></a>
                     <div class="icon-overlay" id="image-6">
                         <img src="img/ysc.png" alt="">
                         <div>
@@ -89,15 +126,18 @@
                         <a href="#page" class="icon-close">x Close</a>
                     </div>
                 </li>
-                
-                <li><a href="#image-8">
-                        <img src="img/syke-thumb.jpg" alt="" class="thumbs">
-                    </a>
+
+                <li>
+                    <a href="#image-8">
+                        <img src="img/syke-thumb.jpg" alt="" class="thumbs"></a>
                     <div class="icon-overlay" id="image-8">
                         <img src="img/sykefest.jpg" alt="">
                         <div>
-                             <h2>sykefest</h2>
-                            <p>One of the first websites I designed and coded, an event site created for Syke, a Northern Virginia non-profit. Each page features original photography. <a href="http://allypalanzi.com/live/sykefest/" target="_blank">View it live!</a></p>
+                            <h2>sykefest</h2>
+                            <p>
+                                One of the first websites I designed and coded, an event site created for Syke, a Northern Virginia non-profit. Each page features original photography.
+                                <a href="http://allypalanzi.com/live/sykefest/" target="_blank">View it live!</a>
+                            </p>
                             <a href="#image-7" class="icon-prev"></a>
                             <a href="#image-9" class="icon-next"></a>
                         </div>
@@ -105,14 +145,16 @@
                     </div>
                 </li>
 
-                <li><a href="#image-9">
-                        <img src="img/penguincrossing-thumb.png" alt="" class="thumbs">
-                    </a>
+                <li>
+                    <a href="#image-9">
+                        <img src="img/penguincrossing-thumb.png" alt="" class="thumbs"></a>
                     <div class="icon-overlay" id="image-9">
                         <img src="img/penguincrossing.png" alt="">
                         <div>
                             <h2>penguin crossing</h2>
-                            <p>Android game designed and developed for an introductory computer science course.</p>
+                            <p>
+                                Android game designed and developed for an introductory computer science course.
+                            </p>
                             <a href="#image-8" class="icon-prev"></a>
                             <a href="#image-10" class="icon-next"></a>
                         </div>
@@ -120,107 +162,114 @@
                     </div>
                 </li>
 
-                
-
-                <li><a href="#image-10">
-                        <img src="img/papertowns-thumb.jpg" alt="" class="thumbs">
-                    </a>
+                <li>
+                    <a href="#image-10">
+                        <img src="img/papertowns-thumb.jpg" alt="" class="thumbs"></a>
                     <div class="icon-overlay" id="image-10">
                         <img src="img/papertowns.jpg" alt="">
                         <div>
                             <h2>paper towns</h2>
-                            <p>A book cover created for the novel Paper Towns written by John Green. For this project, I folded a map into a cityscape, photographed it in order to portray the importance of maps and the metaphor of paper in the story.</p>
+                            <p>
+                                A book cover created for the novel Paper Towns written by John Green. For this project, I folded a map into a cityscape, photographed it in order to portray the importance of maps and the metaphor of paper in the story.
+                            </p>
                             <a href="#image-9" class="icon-prev"></a>
                             <a href="#image-11" class="icon-next"></a>
                         </div>
                         <a href="#page" class="icon-close">x Close</a>
                     </div>
                 </li>
-                <li><a href="#image-11">
-                        <img src="img/virginiawoolf-thumb.jpg" alt="" class="thumbs">
-                    </a>
+                <li>
+                    <a href="#image-11">
+                        <img src="img/virginiawoolf-thumb.jpg" alt="" class="thumbs"></a>
                     <div class="icon-overlay" id="image-11">
                         <img src="img/virginiawoolf.jpg" alt="" width="400px">
                         <div>
                             <h2>who's afraid of virginia woolf?</h2>
-                            <p>Poster created for the play Who's Afraid of Virginia Woolf? For this project, I layed out symbols and items from the play on a table to demonstrate the disarray throughout the play, then photographed it. I overlaid bold, modern typography to give off the modern feel of the family structure in the play, even though it is about a family in the 60s.</p>
+                            <p>
+                                Poster created for the play Who's Afraid of Virginia Woolf? For this project, I layed out symbols and items from the play on a table to demonstrate the disarray throughout the play, then photographed it. I overlaid bold, modern typography to give off the modern feel of the family structure in the play, even though it is about a family in the 60s.
+                            </p>
                             <a href="#image-10" class="icon-prev"></a>
                             <a href="#image-1" class="icon-next"></a>
                         </div>
                         <a href="#page" class="icon-close">x Close</a>
                     </div>
                 </li>
-                
-            <div class="clear"></div>
+
+                <div class="clear"></div>
 
             </ul>
+        </div>
+        <div class="dribbble">
             <div class="header">
-                <h1>DRIBBBLES</h1>
+                <h1>Dribbbles</h1>
             </div>
 
-
-            <ul id="dribbble">
-
-            </ul>
-
+            <ul id="dribbble"></ul>
+        </div>
+        <div class="flickr">
             <div class="header">
-                <h1>FLICKR</h1>
+                <h1>Flickr</h1>
             </div>
-    
-            <ul id="myPhotos">
-            </ul>
+
+            <ul id="myPhotos"></ul>
 
             <div style="margin-bottom:50px;"class="clear"></div>
-
-            
+        </div>
+        <div class="contact">
             <div class="header">
-                <h1>SAY HELLO!</h1>
+                <h1>Say Hello!</h1>
             </div>
             <div id="contact">
                 <form method="post" action="contact.php" id="form" autocomplete="on">
                     <div class="left">
-                    <div>
-                        <p> <label for="name" class="user">Name</label>
-                        <br>
-                        <input type="text" name="name" required="" id="name" placeholder="My name is..."> </p>
-                    </div>
-                    <div>
-                        <p> <label for="email" class="mail-alt">Email</label>
-                        <br>
-                        <input type="email" name="email" required="" id="email" placeholder="Email"> </p>
-                    </div>
-                    <div>
-                        <p> <label for="subject" class="comment">Subject</label>
-                        <br>
-                        <input type="text" name="subject" required="" id="subject" placeholder="Your site is so amazing omg"> </p>
-                    </div>
+                        <div>
+                            <p>
+                                <label for="name" class="user">Name</label>
+                                <br>
+                                <input type="text" name="name" required="" id="name" placeholder="My name is..."></p>
+                        </div>
+                        <div>
+                            <p>
+                                <label for="email" class="mail-alt">Email</label>
+                                <br>
+                                <input type="email" name="email" required="" id="email" placeholder="Email"></p>
+                        </div>
+                        <div>
+                            <p>
+                                <label for="subject" class="comment">Subject</label>
+                                <br>
+                                <input type="text" name="subject" required="" id="subject" placeholder="Your site is so amazing omg"></p>
+                        </div>
                     </div>
                     <div class="right">
-                    <div>
-                        <p> <label for="message" class="message">Message</label>
-                        <br>
-                        <textarea name="message" required="" id="message" placeholder="Questions? Comments? Hire me?"></textarea> </p>
-                    </div>
-                    <p><a class="submit" href="#">»submit</a></p>
+                        <div>
+                            <p>
+                                <label for="message" class="message">Message</label>
+                                <br>
+                                <textarea name="message" required="" id="message" placeholder="Questions? Comments? Hire me?"></textarea>
+                            </p>
+                        </div>
+                        <p>
+                            <a class="submit" href="#">»submit</a>
+                        </p>
 
                     </div>
                     <div class="clear"></div>
-                </form>    
+                </form>
             </div>
 
-        <div class="clear"></div>
+            <div class="clear"></div>
         </div>
 
+        <div id="footer">
+            <h4 class="text">
+                <a href="http://www.dribbble.com/allypalanzi" target="_blank">d</a><a href="http://www.linkedin.com/profile/view?id=140891622&trk=hb_tab_pro_top" target="_blank">i</a><a href="https://twitter.com/mylifeasalllly" target="_blank">l</a><a href="http://www.flickr.com/photos/electricamp/" target="_blank">n</a>
+            </h4>
+            <p>
+                &copy;Ally Palanzi. Forever and ever.
+                <a href="resume.pdf" target="_blank">View My Resume</a>
+            </p>
+        </div>
 
-    <div id="footer">
-        <h4 class="text"><a href="http://www.dribbble.com/allypalanzi" target="_blank">d</a><a href="http://www.linkedin.com/profile/view?id=140891622&trk=hb_tab_pro_top" target="_blank">i</a><a href="https://twitter.com/mylifeasalllly" target="_blank">l</a><a href="http://www.flickr.com/photos/electricamp/" target="_blank">n</a></h4>
-        <p>&copy;Ally Palanzi. Forever and ever. <a href="resume.pdf" target="_blank">View My Resume</a></p>
     </div>
-
 </div>
-</div>
-	
-
-
-
-		
