--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -270,24 +270,24 @@ to  {opacity: 0;}
 }
 
 .allyicon {
-    width:  125px;
-    height:  125px;
-    border-radius:  150px;
-    -webkit-border-radius:  150px;
-    -moz-border-radius:  150px;
     background:  url(../img/ally.jpg) no-repeat;
     background-size: 100%;
+    border-radius:  150px;
     border:  5px solid #fff;
+    height:  125px;
     margin-left: 25%;
-    animation:  fadein 0.5s;
+    margin-top: 10px;
+    width:  125px;
     -moz-animation:  fadein 0.5s; /* Firefox */
-    -webkit-animation:  fadein 0.5s; /* Safari and Chrome */
+    -moz-border-radius:  150px;
     -o-animation:  fadein 0.5s; /* Opera */
-
+    -webkit-animation:  fadein 0.5s; /* Safari and Chrome */
+    -webkit-border-radius:  150px;
+    animation:  fadein 0.5s;
     }
 
 
-#gallery {
+.gallery {
     width: 100%;
     max-width: 800px;
 }
