--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -31,6 +31,9 @@
 
 // #Fonts
 // ==================================================
+
+@import url(http://fonts.googleapis.com/css?family=Arvo:400,400italic|Oswald:400,300);
+
 @font-face  {
     font-family: 'socialicoregular';
     src: url('fonts/socialico-webfont.eot');
@@ -45,8 +48,9 @@
 
 // #Variables
 // ==================================================
-    $green:#22B573;
-    $gray:#757575;
+    $green: #22B573;
+    $gray: #757575;
+    $black: #3a3a3a;
 
 
 // #Basic Styles
@@ -54,12 +58,7 @@
 	body  {
         width: 100%;
         min-width: 320px;
-        -webkit-transition: all 1s ease-in-out;
-        -moz-transition: all 1s ease-in-out;
-        -o-transition: all 1s ease-in-out;
-        -ms-transition: all 1s ease-in-out;
-        transition: all 1s ease-in-out;
-        background: url("../img/bg.png") fixed ;
+        background: #f4f4f4;
         font-family: 'Arvo',serif;
         font-size: 15px;
     }
@@ -153,19 +152,26 @@ to  {opacity: 0;}
 // ==================================================
     h1 {
         font-family: 'Oswald',helvetica;
-        color: #000;
+        color: $black;
         font-size:  40px;
         line-height: 60px;
         font-weight: 300;
+    @media(max-width: 400px) {
+        font-size: 30px
+        }
+
  
     }
 
     h2 {
         font-family: 'Oswald',helvetica;
-        color: #000;
+        color: $black;
         font-size:  30px;
         font-weight: 300;
         line-height: 35px;
+        @media (max-width: 400px) {
+            font-size: 25px;
+        }
     }
 
     h3 {
@@ -219,7 +225,7 @@ to  {opacity: 0;}
 // ==================================================
     .navcont {
         width: 100%;
-        background-color: #000;
+        background-color: $black;
         height: 10px;
     }
 
@@ -266,7 +272,7 @@ to  {opacity: 0;}
 
 
 .header {
-    margin: 1%;
+    margin-bottom: 50px;
 }
 
 .allyicon {
@@ -275,7 +281,7 @@ to  {opacity: 0;}
     border-radius:  150px;
     border:  5px solid #fff;
     height:  125px;
-    margin-left: 25%;
+    margin-left: 10px;
     margin-top: 10px;
     width:  125px;
     -moz-animation:  fadein 0.5s; /* Firefox */
@@ -287,32 +293,51 @@ to  {opacity: 0;}
     }
 
 
-.gallery {
+
+
+.section {
+    margin-bottom: 50px;
+    h1 {
+        margin-bottom: 20px;
+    }
     width: 100%;
     max-width: 800px;
 }
 
 #icons,#dribbble,#myPhotos {
-    margin-bottom: 50px;
-    overflow: none;
+    overflow: hidden;
     li {
-        float: left;
+        vertical-align: top;
+        background: $green;
         border: 5px solid white;
-        max-width: 176px;
+        float: left;
+        margin: 0.7%;
         max-height: 132px;
+        max-width: 176px;
         min-width: 125px;
         width: 22%;
-        margin: 0.7%;
         animation:  fadein 0.5s;
         -moz-animation:  fadein 0.5s; /* Firefox */
         -webkit-animation:  fadein 0.5s; /* Safari and Chrome */
         -o-animation:  fadein 0.5s; /* Opera */
+            transition: opacity .5s;
+    -webkit-transition: opacity .5s;
+    -moz-transition: opacity .5s;
+        overflow: hidden;
         @media(max-width: 650px) {
             margin: 0.5%;
         }
         @media(max-width: 590px) {
             margin: 2.5%;
         }
+        img {
+        &:hover {
+            opacity: .5;
+            transition: opacity .5s;
+    -webkit-transition: opacity .5s;
+    -moz-transition: opacity .5s;
+        }
+    }
 
 }
 
@@ -324,8 +349,6 @@ to  {opacity: 0;}
         margin-bottom: 10px;
     }
     a {
-        text-align:  right;
-        float: right;
         font-size: 25px;
         font-family: 'Oswald', sans-serif;
         font-weight: 300;
@@ -336,13 +359,17 @@ to  {opacity: 0;}
     }
 }
 
+.submit {
+    text-align: right;
+}
+
 input {
     width: 100%;
     font-family:  "Arvo";
     font-size: 14px;
     line-height:  20px;
     margin-top: 10px;
-    border: none;
+    border: 2px solid #f4f4f4;
     padding: 4px;
 
 }
@@ -353,8 +380,7 @@ textarea {
     font-size: 14px;
     line-height:  20px;
     margin-top: 10px;
-    border: none;
-    padding: 4px;
+    border: 2px solid #f4f4f4;
 }
 
 .thumbs {
@@ -362,170 +388,91 @@ textarea {
     max-width: 200px;
     max-height: 150px;
     height: 100%;
+    vertical-align: top;
+    
+    img {
+        width: 100%;
+    }
 
 }
 
 #myPhotos img {
-    width: 100%;
-    max-width: 176px;
-    height: 132px;
-
-
-}
-
-.icon-album li > a,
-.icon-album li > a img {
-    display:  block;
-    
+    width: 130%;
+    vertical-align: top;
 }
 
 
-.icon-overlay {
-    animation:  fadein 0.5s;
-    -moz-animation:  fadein 0.5s; /* Firefox */
-    -webkit-animation:  fadein 0.5s; /* Safari and Chrome */
-    -o-animation:  fadein 0.5s; /* Opera */
-    width:  0px;
-    height:  0px;
-    position:  fixed;
-    overflow:  scroll;
-    left:  0px;
-    top:  0px;
-    padding:  0px;
-    z-index:  99;
-    text-align:  center;
-    background:  #fff;
-    background:  rgba(255,255,255,1);
 
-
-}
-
-
-.icon-overlay > div {
-    animation:  fadein 0.5s;
-    -moz-animation:  fadein 0.5s; /* Firefox */
-    -webkit-animation:  fadein 0.5s; /* Safari and Chrome */
-    -o-animation:  fadein 0.5s; /* Opera */
-    position:  relative;
-    color:  rgba(27,54,81,0.9);
-    width:  100%;
-    margin-bottom: 50px;
-    max-width: 800px;
-    margin: 0px auto;
-
-    p {
-        width: 80%;
-    }
-
-
-}
-
-.icon-overlay a.icon-close {
-    background:  rgba(27,54,81,0.8);
-    z-index:  1001;
-    color:  #fff;
-    position:  absolute;
-    top:  43px;
-    left:  50%;
-    font-size:  15px;
-    line-height:  26px;
-    text-align:  center;
-    width:  50px;
-    height:  23px;
-    overflow:  hidden;
-    margin-left:  -25px;
-    opacity:  0;
-    filter:  alpha(opacity=0); /* internet explorer */
-    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
-    -webkit-box-shadow:  0px 1px 2px rgba(0,0,0,0.3);
-    -moz-box-shadow:  0px 1px 2px rgba(0,0,0,0.3);
-    box-shadow:  0px 1px 2px rgba(0,0,0,0.3);
-
-}
-.icon-overlay img {
-    width: 93%;
-    max-width: 800px;
-    min-width: 300px;
-    position:  relative;
-    opacity:  0;
-    filter:  alpha(opacity=0); /* internet explorer */
-    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
-    -webkit-box-shadow:  1px 1px 4px rgba(0,0,0,0.3);
-    -moz-box-shadow:  1px 1px 4px rgba(0,0,0,0.3);
-    box-shadow:  0px 2px 7px rgba(0,0,0,0.2);
-    -webkit-transition:  opacity 0.5s linear;
-    -moz-transition:  opacity 0.5s linear;
-    -o-transition:  opacity 0.5s linear;
-    -ms-transition:  opacity 0.5s linear;
-    transition:  opacity 0.5s linear;
-    border: 5px solid white;
-    margin-bottom: 25px;
-}
-.icon-prev, .icon-next {
-    margin-top: -65px;
-    width:  40px;
-    height:  100px;
-    opacity:  0.8;
-    filter:  alpha(opacity=80); /* internet explorer */
-    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(opacity=80)"; /*IE8*/
-    @media(max-width: 590px) {
-        width: 20px;
-    }
-}
-.icon-prev:hover, .icon-next:hover {
-    opacity:  1;
-    filter:  alpha(opacity=99); /* internet explorer */
-    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
-}
-.icon-prev {
-    background:  transparent url(../img/arrow-left.png); background-repeat: no-repeat;
-    background-size: 100%;
-    float:  left;
-    margin-left: 1%;
-
-
-}
-.icon-next {
-    background:  transparent url(../img/arrow-right.png);background-repeat: no-repeat;
-    background-size: 100%;
-    float:  right;
-    margin-right: 1%;
-
-}
-.icon-overlay:target  {
-    width: auto;
-    height: auto;
-    bottom: 0px;
-    right: 0px;
-    padding: 50px 0px 0px 0px;
-
-}
-.icon-overlay:target img,
-.icon-overlay:target a.icon-close {
-    opacity: 1;
-    filter: alpha(opacity=99); /* internet explorer */
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
-
-}
-/* 
-    100% Height for Opera as the max-height seems to be ignored, not optimal for large screens 
-    http://bricss.net/post/11230266445/css-hack-to-target-opera 
-*/
-x:-o-prefocus, .icon-overlay img  {
-    height: 100%;
-}
-
-#footer {
+.footer {
     text-align: center;
-    margin-top:40px;
-    margin-bottom:20px;
     text-align: right;
-    margin-right:25px;
     p {
         font-size:11px;
     }
     @media(max-width:590px) {
         text-align:center;
         margin-right:0px;
+    }
+}
+
+.arrows {
+    color: #fff;
+    display: inline-block;
+    background: rgba(0,0,0,.8);
+    padding: 10px;
+    font-size: 40px;
+    line-height: 55px;
+    position: fixed;
+    top: 50%;
+    transition: background .5s;
+    -webkit-transition: background .5s;
+    -moz-transition: background .5s;
+    &.arrows-right {
+        right: 0;
+    }
+    &.arrows-left {
+        left: 0;
+    }
+    &:hover {
+        background: rgba(0,0,0,1);
+        transition: background .5s;
+        -webkit-transition: background .5s;
+        -moz-transition: background .5s;
+    }
+    @media(max-width: 400px) {
+        font-size: 20px;
+        line-height: 35px;
+    }
+}
+.project-image {
+    width: 100%;
+    img {
+        border: 5px solid white;
+        width: 97%;
+    }
+}
+
+.role {
+    margin-bottom: 20px;
+}
+
+.live {
+    display: inline-block;
+    border: none;
+    padding: 10px 25px 10px 25px;
+    margin: 40px 0px 10px 0px;
+    background: $green;
+    transition: background .5s;
+    -webkit-transition: background .5s;
+    -moz-transition: background .5s;
+    color: #fff;
+
+    
+    &:hover {
+        background: $gray;
+        color: #fff;
+    transition: background .5s;
+    -webkit-transition: background .5s;
+    -moz-transition: background .5s;
     }
 }
