added projects and all project pages

--- a/source/designshow.html.erb
+++ b/source/designshow.html.erb
@@ -1,23 +1,17 @@
-<a href="little.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="chclt.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="chclt.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="ukrave.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
-<h1>Scholarsheep</h1>
+<h1>AU Design Expo</h1>
 <div class="project-image section">
-    <img src="img/scholarsheep-1.jpg">
+    <img src="img/designshow-1.png">
 </div>
 <div class="project-description section">
-<p class="role"><strong>Role:</strong> Design, Concept, &amp; Logo</p>
+<p class="role"><strong>Role:</strong> Design</p>
 <p>Worked with Josh Mahan and Cristina Keane to concept a library research assistant application. Our process began with research at American University to find that what students want in an app is an easy way to find books related to ones they have already acquired for research. We learned that most students are unfamiliar with how the library works, so we came up with a solution to lead them directly to books.</p>
 </div>
 <div class="project-image section">
-    <img src="img/scholarsheep-design.png">
-  </div>
-<div class="project-image section">
-    <img src="img/scholarsheep-flow.png">
-  </div>
-<div class="project-image section">
-    <img src="img/scholarsheep-wire.png">
-  </div>
+    <img src="img/designshow.png">
+</div>
 </div>
 
 <%= partial 'partials/footer' %>
