--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -33,7 +33,7 @@
   <div class="navcont"></div>
   <div class="wrapper">
     <div class="wrapper-left">
-      <div class="allyicon"></div>
+      <a href="index.html"><div class="allyicon"></div></a>
     </div>
     <div class="wrapper-right">
       <div class="header">
