--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -1,5 +1,5 @@
-<a href="ysc.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="virginiawoolf.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="ukrave.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="vox.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Muse</h1>
 <div class="project-image section">
@@ -35,6 +35,7 @@
 <div class="project-description section">
 
 <p>A paper prototype created and tested to help figure out the UX of the app.</p>
+<a href="http://allypalanzi.github.io/districtmuse/presentation.pdf" class="live" target="_blank">View Presentation</a>
 </div>
 </div>
 
