--- a/source/offbeat.html.erb
+++ b/source/offbeat.html.erb
@@ -1,13 +1,23 @@
-<a href="artallnight.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="syke.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="vox.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="ysc.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
-<h1>Paper Towns Book Cover</h1>
+<h1>OffbeatDC</h1>
 <div class="project-image section">
-    <img src="img/papertowns.jpg">
+    <img src="img/artallnight-1.jpg">
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong> Design, Photography, &amp; Concept</p>
 <p>A book cover created for the novel Paper Towns written by John Green. For this project, I folded a map into a cityscape, photographed it in order to portray the importance of maps and the metaphor of paper in the story.</p>
+</div>
+<div class="project-image section">
+    <img src="img/artallnight-2.jpg">
+</div>
+<div class="project-image section">
+    <img src="img/artallnight-3.jpg">
+</div>
+
+<div class="project-image section">
+    <img src="img/artallnight.gif">
 </div>
 </div>
 
