--- a/source/partials/_thumbs.html.erb
+++ b/source/partials/_thumbs.html.erb
@@ -7,8 +7,18 @@
     </a>
 </li>
 <li>
+    <a href="muse.html">
+        <img src="img/muse-thumb.png" alt="" class="thumbs"></a>
+    </a>
+</li>
+<li>
     <a href="vox.html">
         <img src="img/voxmedia-thumb.jpg" alt="" class="thumbs"></a>
+    </a>
+</li>
+<li>
+    <a href="offbeat.html">
+        <img src="img/offbeat-thumb.png" alt="" class="thumbs"></a>
     </a>
 </li>
 <li>
@@ -16,14 +26,20 @@
         <img src="img/ysc-thumb.png" alt="" class="thumbs"></a>
     </a>
 </li>
-<li>
-    <a href="muse.html">
-        <img src="img/muse-thumb.png" alt="" class="thumbs"></a>
-    </a>
-</li>
+
 <li>
     <a href="virginiawoolf.html">
         <img src="img/virginiawoolf-thumb.jpg" alt="" class="thumbs"></a>
+    </a>
+</li>
+<li>
+    <a href="megabus.html">
+        <img src="img/megabus-thumb.png" alt="" class="thumbs"></a>
+    </a>
+</li>
+<li>
+    <a href="artallnight.html">
+        <img src="img/artallnight-thumb.jpg" alt="" class="thumbs"></a>
     </a>
 </li>
 <li>
@@ -44,6 +60,17 @@
 <li>
     <a href="scholarsheep.html">
         <img src="img/scholarsheep-thumb.png" alt="" class="thumbs"></a>
+    </a>
+</li>
+
+<li>
+    <a href="chclt.html">
+        <img src="img/chclt-thumb.jpg" alt="" class="thumbs"></a>
+    </a>
+</li>
+<li>
+    <a href="designshow.html">
+        <img src="img/designshow-thumb.png" alt="" class="thumbs"></a>
     </a>
 </li>
 <div class="clear"></div>
