--- a/source/virginiawoolf.html.erb
+++ b/source/virginiawoolf.html.erb
@@ -1,5 +1,5 @@
 <a href="muse.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="papertowns.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="megabus.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Who's Afraid of Virginia Woolf?</h1>
 <div class="project-image section">
