--- a/source/vox.html.erb
+++ b/source/vox.html.erb
@@ -1,5 +1,5 @@
-<a href="ukrave.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="ysc.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="muse.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="offbeat.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Vox Media Projects</h1>
 <div class="project-image section">
