--- a/source/ysc.html.erb
+++ b/source/ysc.html.erb
@@ -1,9 +1,9 @@
-<a href="vox.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="muse.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="offbeat.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="virginiawoolf.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Yoga Service Council Rebrand</h1>
 <div class="project-image section">
-    <img src="img/ysc.png">
+    <img src="img/ysc-2.jpg">
 </div>
 <div class="project-description section">
 <p class="role"><strong>Role:</strong>Identity, Design</p>
